<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_matches_new"
        android:title="@string/title_match" />

    <item
        android:id="@+id/navigation_experts"
        android:icon="@drawable/expert_icon2"
        android:title="@string/title_experts" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>