<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".livedata.ui.fragment.HomeMainFragment">

    <TextView
        android:id="@+id/moveTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Move to top"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_bg"
        android:backgroundTint="@color/black"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_5sdp"
        android:elevation="@dimen/_10sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:textColor="@color/white"/>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                style="@style/font_medium"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/matches"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/_12sdp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_45sdp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_home_list" />


            <com.arindicatorview.ARIndicatorView
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:animate_indicator_scrubbing="true"
                app:indicator_color="@color/gray_light2"
                app:indicator_scrubbing="true"
                app:indicator_shape="@drawable/round_bg"
                app:indicator_size="20"
                app:selected_color="@color/gray_dark" />



            <TextView
                android:id="@+id/feature_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="4dp"
                style="@style/font_medium"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="gone"
                android:text="@string/feature_video"
                android:textColor="@color/txt_color"
                android:textSize="14sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFeatureVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_feature_video" />

            <TextView
                android:id="@+id/tranding_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="4dp"
                style="@style/font_medium"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="gone"
                android:text="@string/trending_video"
                android:textColor="@color/txt_color"
                android:textSize="14sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTrendingVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_trending_video" />


            <TextView
                android:id="@+id/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="4dp"
                style="@style/font_medium"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/top_stories"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/_12sdp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_news_home_cricplus" />



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/custom_progress" />

</RelativeLayout>